--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,11 @@
       content="Pictures of puppies!"
     />
 
+    
     <title>Happy Dog Pictures!</title>
+  
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+    
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
